ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/valid/04_records.lava
record Vector(float x, float y);
record Planet(Vector position, Vector velocity, float mass, boolean active);

Planet earth = new Planet(new Vector(0, 0), new Vector(1, 2), 5, true);
float px = earth.position.x;
earth.position.x = 10.0;
