ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/09_wrong_field_access.lava
record Point(int x, int y);
Point p = new Point(1, 2);
int z = p.z;
